自サイトバナーサイズ調整

--- a/link.html
+++ b/link.html
@@ -131,9 +131,9 @@
   <table class="link">
     <tbody>
       <tr>
-        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_logo.png"></a></td>
-        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_logo.png"></a></td>
-　　　　　　　<td></td>
+        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_banner.png"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner.png"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner2.png"></a></td>
       </tr>
     </tbody>
   </table>
