--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
   </table>
 
   <div class="information">
-    暗黒定数式 Vol.1 - BOOTH（同人誌通販・ダウンロード）<br>
-     <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
     暗黒定数式Vol.1の通販が始まりました！<br>
-    文フリ／コミケで買い逃した方、行けなかった方はぜひぜひ。
+    <div style="font-size:small;">書籍版 <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
+         pdf版 <a href="https://dark-constexpr.booth.pm/items/65524" target="_blank">https://dark-constexpr.booth.pm/items/65524</a>
+    </div>
+    また、書籍版購入者には<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">無料でpdf版が配布されるとのこと</a>なので<br>
+    こちらもご興味がある方はぜひに。
   </div>
   
 </body>
